# chickie-worker

./: .dockerignore  Cargo.toml  Dockerfile  config.toml
src/: lib.rs  main.rs
src/handlers/: message_handler.rs
