[package]
name = "chickie-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
lapin = "2.5"  # Cliente RabbitMQ async
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_json = "1"  # Para parsear mensagens JSON
futures = "0.3"  # ← Necessário para StreamExt